// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of a Node with right/left child 1`] = `
Node {
  "_color": 1,
  "_data": "inner",
  "_left": Node {
    "_color": 0,
    "_data": "parent reference",
    "_left": null,
    "_parent": null,
    "_right": null,
  },
  "_parent": Node {
    "_color": 0,
    "_data": "right child",
    "_left": null,
    "_parent": null,
    "_right": null,
  },
  "_right": Node {
    "_color": 0,
    "_data": "left child",
    "_left": null,
    "_parent": null,
    "_right": null,
  },
}
`;

exports[`Test creation of a simple Node 1`] = `
Node {
  "_color": 0,
  "_data": "test",
  "_left": null,
  "_parent": null,
  "_right": null,
}
`;
